Bug 134563 - FILEOPEN XLSX Show leader lines property is always on
Summary: FILEOPEN XLSX Show leader lines property is always on
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:7.1.0
Keywords: filter:xlsx
Depends on:
Blocks: OOXML-Chart 133227
  Show dependency treegraph
 
Reported: 2020-07-06 11:44 UTC by NISZ LibreOffice Team
Modified: 2020-09-14 09:53 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel 2013 (13.07 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-07-06 11:44 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Excel and Calc (106.09 KB, image/png)
2020-07-06 11:45 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-07-06 11:44:11 UTC
Created attachment 162703 [details]
Example file from Excel 2013

Attached file is a modified version of attachment #161078 [details] – with the option Show leader lines turned off in Excel.
Calc imports this file with leader lines turned on, just like in attachment #161078 [details] where it is in fact turned on.

Steps to reproduce:
    1. Open attached file

Actual results:
Leader lines are shown.

Expected results:
Leader lines should be turned off.

LibreOffice details:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 9af38b4504ccda57a0c32eb8bdd03e5a8ca29ddc
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2020-07-06 11:45:25 UTC
Created attachment 162704 [details]
Screenshot of the original document side by side in Excel and Calc
Comment 2 Commit Notification 2020-08-18 17:02:30 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5d67d70b26706ce8a08612c12a68821f984210a2

tdf#134563 Add UNO API for custom leader lines

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 NISZ LibreOffice Team 2020-09-14 09:53:44 UTC
Verified in:

Version: 7.1.0.0.alpha0+ (x64)
Build ID: 34a09c9c61bff30e8c4d16132bb47b2b1b16e422
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded